--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,7 @@ pandas==2.2.3
 numpy==2.1.3
 
 # Database
-SQLAlchemy==2.0.23
-pysqlite3-binary  # Built-in
+pysqlite3-binary
 
 # Visualization
 plotly==5.24.1
