--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,11 @@ Thumbs.db
 # Logs
 *.log
 logs/
+!logs/CHANGELOG.md
+!logs/VERSION
+!logs/VERSION_MANAGEMENT.md
+!logs/VERSION_STRATEGY.md
+
 
 # Next.js
 .next/
