--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "next": "^14.2.33",
+    "nextjs-toploader": "^3.9.17",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-day-picker": "^9.11.3",
