--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,9 +19,7 @@ passlib[bcrypt]>=1.7.4,<2.0.0
 # Environment
 python-dotenv>=1.0.0,<2.0.0
 
-# Google Gemini & Drive
-google-genai>=1.56.0
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
+# Image Processing
+Pillow>=10.2.0
+python-magic>=0.4.27
 httpx
