Refactor Inbound module and adjust Dashboard layout

--- a/backend/app/configs/system_config.json
+++ b/backend/app/configs/system_config.json
@@ -80,6 +80,7 @@
           "unit": "단위 (kg, bag, etc.)",
           "unit_price": "단가 (Number)",
           "amount": "금액 (Number)",
+          "total_weight": "총중량 (Number)",
           "note": "비고"
         }
       ],
